@@ -1,3 +1,8 @@
+2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/vp6/vp6.py:
+	  Set properties based on Julien's recommendations.  See #2133.
+
 2008-08-26  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py
